# SuperDarkEngine

./: .gitignore  Cargo.toml  LICENSE  README.md  SuperDarkEngine.sln
.github/workflows/: editor_build.yml  engine_build.yml
.gitlab/merge_request_templates/: default.md
Editor/Backend.Common/: Backend.Common.csproj
Editor/Backend.Common/MessagePropagator/: BackgroundTaskDispatcher.cs  CurrentThreadTaskDispatcher.cs  IMessageExceptionHandler.cs  IMessagePropagator.cs  ISubscriptionToken.cs  ITaskDispatcher.cs  LogConsoleMessageExceptionHandler.cs  Message.cs  MessagePropagator.cs  SubscriptionToken.cs  ThreadHandler.cs
Editor/Backend.Common/Reflection/: ReflectionUtil.cs
Editor/Backend.Common/Tools/: BaseToolWindow.cs  DefaultToolWindowAttribute.cs  ToolWindowAttribute.cs  ToolWindowReflectionUtil.cs  ToolWindowType.cs
Editor/Backend.EngineInterop/: Backend.EngineInterop.csproj  EngineInterop.cs  GameEngine.cs
Editor/Backend.Messages/: Backend.Messages.csproj
Editor/Backend.UI/: Backend.UI.csproj
Editor/Editor/: App.xaml  App.xaml.cs  Editor.csproj  Program.cs  RustBuild.targets  RustDependencies.targets  ViewLocator.cs
Editor/Editor/Dock/: ToolDockFactory.cs
Editor/Tool.Example/: Tool.Example.csproj
Editor/Tool.SceneViewer/: SceneViewer.xaml  SceneViewer.xaml.cs  SceneViewerVM.cs  Tool.SceneViewer.csproj
Engine/: Cargo.toml
Engine/Engine/: Cargo.toml
Engine/Engine/src/: lib.rs
Engine/Engine/src/core/: ffi.rs  game_engine.rs  mod.rs  window.rs
Engine/gfx_core/: Cargo.toml
Engine/gfx_core/src/: camera.rs  gfx_device.rs  lib.rs  math.rs  null_gfx_device.rs
Engine/gfx_vulkan/: Cargo.toml
Engine/gfx_vulkan/src/vulkan/renderer/: mod.rs
Engine/gfx_vulkan/src/vulkan/utility/: debug.rs  mod.rs
Engine/src/: lib.rs
Engine/src/vulkan/: mod.rs
Engine/src/vulkan/command_dispatch/: mod.rs
Engine/src/vulkan/physical_device/: mod.rs
Engine/src/vulkan/utility/: constants.rs  platforms.rs  structures.rs  tools.rs
(+35 files in other folders)
