[package]
name = "super_dark_engine"
description = "Rust Game Engine"
version = "0.1.0"
authors = ["Russell Johnson <encrypteddata0@gmail.com>"]
keywords = ["game", "engine", "superdark"]
categories = ["game-engines"]
edition = "2018"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
