[package]
name = "super_dark_engine"
description = "Rust Game Engine"
version = "0.1.0"
authors = ["Russell Johnson <encrypteddata0@gmail.com>", "James Sumihiro <jasumihiro@gmail.com>"]
keywords = ["game", "engine", "superdark"]
categories = ["game-engines"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

default = []

# Vulkan Graphics Features
vulkan = ["gfx_vulkan"]

# DirectX graphics features
directx = ["dx11"]
dx11 = []

# Metal graphics features
metal = []

[dependencies]
serde_json = "1.0.64"

gfx_core = { path = "../gfx_core/" }

gfx_vulkan = { path = "../gfx_vulkan/", optional = true  }
