[package]
name = "gfx_core"
description = "Core Graphics Library for SuperDarkEngine"
version = "0.1.0"
authors = ["Russell Johnson <encrypteddata0@gmail.com>", "James Sumihiro <jasumihiro@gmail.com>"]
keywords = ["game", "engine", "superdark"]
categories = ["game-engines"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
cgmath = "0.18.0"